hphp/test/zend/good/ext/curl/tests/curl_basic_010.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded("curl")) die("skip");
$addr = "www.".uniqid().".".uniqid();
if (gethostbyname($addr) != $addr) {
    die("skip catch all dns");
}
}
